--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -14,5 +14,5 @@ jobs:
       - uses: jasineri/gitartwork@v1
         with:
            user_name: jasineri
-           text: JASINERI
-      - uses: jasineri/simple-push-action@v1
+           text: Epsilon
+      - uses: EpsilonCoder//simple-push-action@v1
